# menv

./: LICENSE  README.md  pyproject.toml  reproducer.py
src/menv/: builder.py  cli.py  utils.py
src/menv/scripts/common/: mactivate
tests/unit/: test_builder.py
