[project]
name = "menv"
version = "0.1.0"
description = "Mojo venv"
authors = [
    {name = "Drunkwcodes", email = "drunkwcodes@gmail.com"},
]
dependencies = [
    "click>=8.1.7",
    "tomlkit>=0.12.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.15.0",
    "pytest>=7.4.2",
    "mkdocs>=1.5.2",
    "ruff>=0.0.289",
    "black>=23.9.1",
    "pylint>=2.17.5",
]

[project.scripts]
menv = "menv.cli:cli"
